# pymrimisc

./: pyproject.toml
src/pymrimisc/: __init__.py  dvars.py  motion.py
