[project]
name = "pymrimisc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nibabel>=5.2.1",
    "numpy",
    "polars>=1.7.1",
    "scipy>=1.14.1",
]

[project.scripts]
hello = "pymrimisc:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
