[project]
name = "pymrimisc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nibabel",
    "numpy",
    "polars",
    "scipy",
]

[project.scripts]
hello = "pymrimisc:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
